--- a/baita/templates/base.html
+++ b/baita/templates/base.html
@@ -14,8 +14,11 @@
     <body>
         <div id="wrapper">
             <header id="header">
-                <div id="logo"><img src="{% static 'logo.png' %}" alt=""/></div>
-                <div id="topbanner"><img src="{% static 'top_banner.png' %}" width="800" height="200" alt=""/></div>
+                
+                <div id="topbanner"><img src="{% static 'top_banner.png' %}" width="800" height="200" alt=""/>
+                    <div id="logo"><img src="{% static 'logo.png' %}" alt=""/></div>
+                </div>
+                
             </header>
             <aside id="leftsidebar">
                 <nav id="nav">
