--- a/baita/templates/base.html
+++ b/baita/templates/base.html
@@ -16,7 +16,7 @@
             <header id="header">
                 
                 <div id="topbanner"><img src="{% static 'top_banner.png' %}" width="800" height="200" alt=""/>
-                    <div id="logo"><img src="{% static 'logo.png' %}" alt=""/></div>
+                    <div id="logo"><img src="{% static 'logo_ana.png' %}" width="100" height="100"alt=""/></div>
                 </div>
                 
             </header>
