--- a/baita/static/main.css
+++ b/baita/static/main.css
@@ -6,12 +6,14 @@
     height: auto;
 }
 #topbanner {
-    {position:relative; width:800px; height:200px;}
+    position:relative; 
+    width:800px; 
+    height:200px;
 }
 #logo {
     position:absolute; 
-    top:63px; 
-    left:670px; 
+    top:55px; 
+    left:355px; 
     width:90px; 
     height:90px;
 }
