--- a/baita/static/main.css
+++ b/baita/static/main.css
@@ -119,3 +119,27 @@ input {
     border: 1px solid green;
     border-radius: 3px;
 }
+
+$verde: #287233;
+$rosso: red;
+/*
+.orb {
+    animation:spin 3.9s linear infinite;
+    width: 300px;
+    height: 300px;
+    margin: auto;
+    margin-top: 140px;
+    border-radius: 50%;
+    box-shadow:
+        inset 0 0 50px #fff,
+        inset 20px 0 60px $verde,
+        inset -20px 0 60px $rosso,
+        inset 20px 0 300px $verde,
+        inset -20px 0 300px $rosso,
+          0 0 50px #fff,
+          -10px 0 60px $verde,
+          10px 0 60px $rosso;
+}
+
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+*/
