--- a/baita/templates/base.html
+++ b/baita/templates/base.html
@@ -13,13 +13,14 @@
     </head>
     <body>
         <div id="wrapper">
-            <header id="header">
-                
+            <header id="header">  
                 <div id="topbanner"><img src="{% static 'top_banner.png' %}" width="800" height="200" alt=""/>
-                    <div id="logo"><img src="{% static 'logo_ana.png' %}" width="100" height="100"alt=""/></div>
-                </div>
-                
+                       <div id="logo"><img src="{% static 'logo_ana.png' %}"  width="100" height="100"alt=""/>
+                        </div>
+                        <!-- <div class="orb" width="150" height="150"alt=""></div> -->
+                </div>       
             </header>
+            <div class="orb"></div>
             <aside id="leftsidebar">
                 <nav id="nav">
                     <ul>
