--- a/baita/static/main.css
+++ b/baita/static/main.css
@@ -1,7 +1,6 @@
 @charset "utf-8";
 #header {
     border-style: none;
-    /* width: 100%; */
     width: 800px;
     height: auto;
 }
@@ -22,7 +21,6 @@
     margin-left: auto;
     margin-right: auto;
     background-color: #FFFFFF;
-    /* width: 100%; */
     width: 800px;
 }
 body {
@@ -60,25 +58,16 @@ body {
 #leftsidebar {
     width: 180px;
     height: 350px;
-    /* width: 30%; */
-    /* height: 100%; */
     float: left;
 }
 #main {
     width: 560px;
-    /* width: 70%; */
     float: left;
     margin-left: 20px;
     margin-right: 10px;
     padding-right: 10;
 }
-/*
-#logo.header {
-    position: absolute;
-    top: 0;
-    left: -10px; 
-}
-*/
+
 ul.errorlist {
     margin: 0;
     padding: o;
@@ -120,26 +109,23 @@ input {
     border-radius: 3px;
 }
 
-$verde: #287233;
-$rosso: red;
-/*
 .orb {
-    animation:spin 3.9s linear infinite;
-    width: 300px;
-    height: 300px;
-    margin: auto;
-    margin-top: 140px;
+    position:absolute;
+    left:356px; 
+    top:56px; 
+    animation:spin 6s linear infinite;
+    width: 98px;
+    height: 98px;
     border-radius: 50%;
     box-shadow:
         inset 0 0 50px #fff,
-        inset 20px 0 60px $verde,
-        inset -20px 0 60px $rosso,
-        inset 20px 0 300px $verde,
-        inset -20px 0 300px $rosso,
+        inset 20px 0 60px #287233,
+        inset -20px 0 60px red,
+        inset 20px 0 300px #287233,
+        inset -20px 0 300px red,
           0 0 50px #fff,
-          -10px 0 60px $verde,
-          10px 0 60px $rosso;
+          -10px 0 60px #287233,
+          10px 0 60px red;
 }
 
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
-*/
