--- a/baita/templates/base.html
+++ b/baita/templates/base.html
@@ -15,12 +15,13 @@
         <div id="wrapper">
             <header id="header">  
                 <div id="topbanner"><img src="{% static 'top_banner.png' %}" width="800" height="200" alt=""/>
+                    <div class="orb">
+                    </div>
                        <div id="logo"><img src="{% static 'logo_ana.png' %}"  width="100" height="100"alt=""/>
-                        </div>
-                        <!-- <div class="orb" width="150" height="150"alt=""></div> -->
+                        
+                    </div>
                 </div>       
             </header>
-            <div class="orb"></div>
             <aside id="leftsidebar">
                 <nav id="nav">
                     <ul>
